@startuml
'https://plantuml.com/sequence-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
    + getType():boolean
 }
 AbstractFlyingObject <|-- AbstractAircraft
 class MobEnemy {
     + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
     + forward():void
     + shoot():List<BaseBullet>
     + getType():boolean
 }
 AbstractAircraft <|-- MobEnemy

 class EliteEnemy {
     - shootNum:int
     - power:int
     - direction:int
     - prop:AbstractProp
     + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
     + forward():void
     + shoot():List<BaseBullet>
     + getType():boolean
 }
 AbstractAircraft <|--EliteEnemy
 class BossEnemy {
     - shootNum:int
     - power:int
     - direction:int
     - prop:AbstractProp
     + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
     + forward():void
     + shoot():List<BaseBullet>
     + getType():boolean
 }
 AbstractAircraft <|--BossEnemy

 interface EnemyFactory {
     + {abstract} createEnemy():AbstractAircraft
 }

 class MobFactory {
     + createEnemy():AbstractAircraft
 }

 class EliteFactory {
     + createEnemy():AbstractAircraft
 }

 EnemyFactory <|.. MobFactory
 EnemyFactory <|.. EliteFactory
 MobFactory ..> MobEnemy
 EliteFactory ..> EliteEnemy

@enduml